# kalman-stat-arb

./: .gitignore  README.md  pyproject.toml
notebooks/: README.md
results/universe/: aggregate_summary.json  pair_summary.csv  portfolio_cost_sensitivity.csv  portfolio_returns.csv  screen_table.csv
results/v_ma/: cost_sensitivity.csv  kalman_daily_frame.csv  kalman_tuning_grid.csv  naive_daily_frame.csv  naive_tuning_grid.csv  summary.json
scripts/: run_research.py  run_universe_research.py
src/quant_project/: __init__.py  backtest.py  data.py  diagnostics.py  plots.py  research.py  signals.py  universe.py
tests/: test_backtest.py  test_diagnostics.py  test_signals.py
