[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-project"
version = "0.1.0"
description = "Signal extraction and mean-reversion strategies in noisy financial time series."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.9",
  "numpy>=2.1",
  "pandas>=2.3",
  "statsmodels>=0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
